--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>neymar melhor que messi</h1>
-    <ul>
-        <li>escola</li>
-        <li>estudante</li>
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">escola</li>
+        <li class="cabecalho-lista-item">estudante</li>
     </ul>
     </header>
 
