--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </section>
     <section class=”estudante”>
         <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
-        <img src=""
+        <img class="estudante-imagem" src="1a01eda1ce0822f1a6ada6a579ba2eaa.jpg" alt="foto do Neymar Junior">
+    <h3 class="estudante-nome">Neymar Junior</h3>
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+
     </section>
-    
-    
 </body>
 </html>
